# hvac-lg-therma-v

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  registers.json
http-server/: Cargo.toml
http-server/examples/: initial_commissioning.rs  register.rs
http-server/src/: config.json  config.rs  main.rs
modbus-mapping/: Cargo.toml
modbus-mapping/src/: lib.rs
src/: config.json  config.rs  config.toml  lib.rs
src/app/: main.rs
src/app/api/: error.rs  mod.rs  thermav.rs
src/hass/: mod.rs
src/mqtt/: hass.rs  mod.rs  modbus_to_mqtt.rs
